fixed overflow css

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,8 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
  .gist .blob-code-inner{white-space: pre-wrap;font-size:15px !important;text-shadow:0px 0px 1px black }
-
- footer{font-family: 'Roboto', sans-serif;}
+*{font-family: Arial, Helvetica, sans-serif;}
 header {
   padding:50px 0 50px;
 }
